Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.2.0
-
None
-
9ff1310af51814e521572fa3de4e086907633a90
Description
When qmake generates a Makefile for an Objective-C++ precompiled header or source file, currently it appends CFLAGS to the command line.
This behavior seems incorrect, since Objective-C++ files are essentially C++, not C.
This is a problem, since certain C flags are incompatible with C++ mode (e.g., specifying the C standard via -std=c99).
Patch attached.
Attachments
Issue Links
- replaces
-
QTBUG-39057 Precompiled header in Mac cannot have C++11 features
-
- Closed
-