qmake/option.h
@@ -91,6 +91,8 @@ struct Option
     static QStringList h_ext;
     static QStringList cpp_ext;
     static QStringList c_ext;
+    static QString objc_ext;
+    static QString objcpp_ext;
     static QString cpp_moc_ext;
     static QString obj_ext;
     static QString lex_ext;
